                       User-Visible DocKnot Changes

DocKnot 3.01 (unreleased)

    Set user.name and user.email for Git in dist/basic.t test.

DocKnot 3.00 (2019-06-29)

    Separate configuration parsing into a new App::DocKnot::Config module,
    used by App::DocKnot::Generate.

    Move the entry point for command-line commands from App::DocKnot to
    App::DocKnot::Command.  The App::DocKnot module now only provides some
    helper methods to load application data, used by both
    App::DocKnot::Config and App::DocKnot::Generate.  It's no longer
    necessary to explicitly load App::DocKnot before using one of the
    submodules.

    Add new docknot dist command and App::DocKnot::Dist module, which runs
    appropriate commands to create a distribution tarball.  This command
    will also run the test suite, with both Clang and GCC for packages
    using Autoconf, and will also build and test with C++ if the package
    indicates that it supports C++ via the build.cplusplus key in the
    package metadata.

    Support orphaned warnings in the README and README.md output as well
    as thread output.

    Add bug tracker links pointing to the CPAN RT installation to the
    developer documentation links section of the thread template if
    support.cpan is set.

    Output more helpful information about test failures on Windows and
    other systems that don't have the diff command.

DocKnot 2.00 (2019-01-12)

    Move previous docknot command functionality to a new docknot generate
    subcommand.  All docknot actions in the future will be added as
    subcommands.

    docknot generate now takes the name of the template as its first
    positional argument instead of as the -t option.

    generate() and therefore the generate subcommand now defaults to
    looking for metadata in docs/metadata, and the -m option is now
    optional.

    The -o option to docknot generate and the output argument to