@@ -72,7 +72,7 @@ require_ok('App::DocKnot::Dist');
 mkdir($distdir);
 chdir($sourcedir);
 eval {
-    my $dist = App::DocKnot::Dist->new({ distdir => $distdir });
+    my $dist = App::DocKnot::Dist->new({ distdir => $distdir, perl => $^X });
     capture_stdout { $dist->make_distribution() };
 };
 ok(-f File::Spec->catfile($distdir, 'Empty-1.00.tar.gz'), 'dist exists');
