@@ -2,6 +2,12 @@
 
 DocKnot 3.01 (unreleased)
 
+    Allow the path to Perl to be configured in App::DocKnot::Dist.  This
+    is used primarily for testing so that we can try building a
+    distribution using Module::Build with the same Perl used to run the
+    test suite.  This is exposed by the module API but (intentially) not
+    exposed on the docknot command line.  Thanks, Slaven Rezic.  (#129958)
+
     Set user.name and user.email for Git in dist/basic.t test.
 
 DocKnot 3.00 (2019-06-29)
